fixed html variable name

--- a/public/play.html
+++ b/public/play.html
@@ -11,7 +11,13 @@
   </head>
   <body class="flex-center">
     <div class="main" x-data="Bomba">
-      <div id="msg" x-text="msg" :class="!!msgShown||'hidden'" :data-clickable="(winner??draw)&&playerNo!=-1" @click="reset"></div>
+      <div
+        id="msg"
+        x-text="msg"
+        :class="!!msgIsVisible||'hidden'"
+        :data-clickable="(winner??draw)&&playerNo!=-1"
+        @click="reset"
+      ></div>
       <div id="board" :class="disabled&&'disabled'">
         <template x-for="(fill, index) in cells">
           <div class="cell" :data-index="index" :data-fill="fill" @click="fill==-1&&cellClick(index)"></div>
