fixed relative url paths ig

--- a/public/play.html
+++ b/public/play.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bomba</title>
-    <link rel="stylesheet" href="css/play.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="js/alpinejs@3.10.5.min.js" defer></script>
+    <link rel="stylesheet" href="./css/play.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <script src="./js/alpinejs@3.10.5.min.js" defer></script>
   </head>
   <body class="flex-center">
     <div class="main" x-data="Bomba">
@@ -24,7 +24,7 @@
         </template>
       </div>
     </div>
-    <script src="../socket.io/socket.io.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
