--- a/public/play.html
+++ b/public/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bomba</title>
+    <title>tic-tac-toe</title>
     <link rel="stylesheet" href="./css/play.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <script src="./js/alpinejs@3.10.5.min.js" defer></script>
