worked, now trying without hardcoding

--- a/public/play.html
+++ b/public/play.html
@@ -24,7 +24,7 @@
         </template>
       </div>
     </div>
-    <script src="/tictactoe/socket.io/socket.io.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
