--- a/public/play.html
+++ b/public/play.html
@@ -10,7 +10,7 @@
     <script src="./js/alpinejs@3.10.5.min.js" defer></script>
   </head>
   <body class="flex-center">
-    <div class="main" x-data="Bomba">
+    <div class="main" x-data="Ttt">
       <div
         id="msg"
         x-text="msg"
