added multilingual support for practice and migrated to es modules

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body class="flex-center">
     <div id="main">
       <form action="play">
-        <input type="text" name="r" spellcheck="false" autocomplete="off" placeholder="ime sobe" required />
+        <input type="text" name="r" spellcheck="false" autocomplete="off" placeholder="room name" required />
         <input type="submit" value="ok" />
       </form>
     </div>
