--- a/public/play.html
+++ b/public/play.html
@@ -7,7 +7,6 @@
     <title>tic-tac-toe</title>
     <link rel="stylesheet" href="./css/play.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <script src="./js/alpinejs@3.10.5.min.js" defer></script>
   </head>
   <body class="flex-center">
     <div class="main" x-data="Ttt">
@@ -25,6 +24,7 @@
       </div>
     </div>
     <script src="./socket.io/socket.io.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" type="module"></script>
+    <script src="./js/alpinejs@3.10.5.min.js" defer></script>
   </body>
 </html>
